--- a/Views/Shared/Layouts/_Root.cshtml
+++ b/Views/Shared/Layouts/_Root.cshtml
@@ -19,14 +19,14 @@
     }
     @Html.CanonicalLink()
     @Html.AlternateLinks()
-    <link rel="stylesheet" href="~/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/style.min.css" />
-    <link rel="stylesheet" href="~/css/theme.min.css" />
-    <link rel="shortcut icon" href="~/favicon.ico" type="image/x-icon" />
+    <link crossorigin="anonymous" href="~/js/index.js" rel="preload" as="script">
+    <link rel="preload" as="style" href="~/css/index.css" /> 
+    <link rel="stylesheet" href="~/css/index.css" /> 
     <required-client-resources area="Header" />
 </head>
 
 <body>
+<div id="app">
     @if (Model.Layout.IsInReadonlyMode)
     {
         await Html.RenderPartialAsync("Readonly", Model);
@@ -49,7 +49,8 @@
     {
         await Html.RenderPartialAsync("Footer", Model);
     }
+</div>
     <required-client-resources area="Footer" />
-    <script src="~/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="~/js/index.js"></script>
 </body>
 </html>
