--- a/Views/Shared/Header.cshtml
+++ b/Views/Shared/Header.cshtml
@@ -12,8 +12,4 @@
     }
 }
 
-<header>
-    <div class="w-full h-16 bg-green-500 p-6">
-        Header
-    </div>
-</header>
+<ff-header></ff-header>
