--- a/Views/Shared/Layouts/_Root.cshtml
+++ b/Views/Shared/Layouts/_Root.cshtml
@@ -41,14 +41,9 @@
         await Html.RenderPartialAsync("Header", Model);
     }
 
-    <div class="container">
+    <div class="container h-screen ">
         @RenderBody()
     </div>
-
-    @if (!Model.Layout.HideFooter)
-    {
-        await Html.RenderPartialAsync("Footer", Model);
-    }
 </div>
     <required-client-resources area="Footer" />
     <script type="module" src="~/js/index.js"></script>
