KiwiCard and Who Shops blocks created

--- a/Views/Shared/Layouts/_Root.cshtml
+++ b/Views/Shared/Layouts/_Root.cshtml
@@ -41,7 +41,7 @@
         await Html.RenderPartialAsync("Header", Model);
     }
 
-    <div class="container h-screen ">
+    <div class="container min-h-screen ">
         @RenderBody()
     </div>
 </div>
